pilot radio response

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html>
    <body>
-      <p>Radio check. Pilot, please confirm.</p>
+      <p>Radio check. Pilot, please confirm. HELP!!! Or not. Either way</p>
    </body>
 </html>
