--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <html>
    <body>
       <p>Radio check. Pilot, please confirm. HELP!!! Or not. Either way</p>
+      <p>Radio check good, moving on to step 6</p>
    </body>
 </html>
