Step 6 pilot changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 	
 <!DOCTYPE html>
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
    <body>
       <p>Radio check. Pilot, please confirm. HELP!!! Or not. Either way</p>
       <p>Radio check good, moving on to step 6</p>
